[package]
name = "evo-grid-pixels"
version = "0.1.0"
authors = ["Franz Amador <franzamador@gmail.com>"]
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = "0.14"
winit = { version = "0.29", features = ["rwh_05"]}
winit_input_helper = "0.15"
